# atlas_fullbody

atlas_ros_msgs/: mainpage.dox  manifest.xml
atlas_ros_msgs/msg/: AtlasWalkParams.msg  field_param.msg  sf_controller_out.msg  sf_state_est.msg
cmu_walk/: manifest.xml
cmu_walk/include/cmu_walk/: .LipmWalkingCon.h.swp  AtlasStaticWalkingCon.h  BalancingCon.h  Butter1.h  Command.h  DummyFSPlanner.h  Eigen_utils.hpp  Foot.h  FootStep.h  IDcmd.h  IKcmd.h  KFdata.h  LipmWalkingCon.h  Logger.h  LowPassFilter.h  Pose.h  RobotState.h  SDModel.h  SDModel_common.h  StaticWalkingCon.h  Task2WalkingCon.h  TrajEW.h  Transmission.h  Utils.hpp  WalkingCon.h  drc_common_defines.h  drc_hat.h  drc_hat_defines.h  drc_hat_ns.h  drc_hat_ns_defines.h  drc_pelvis.h  drc_pelvis_defines.h  eiquadprog.hpp  id_controller.hpp  ik_controller.hpp  kinematicfilter.h  lipm_planner.hpp  lqr_controller.hpp  mrdplot.h  quaternion.h  (+2 more)
cmu_walk/src/: AtlasStaticWalkingCon.cpp  BalancingCon.cpp  CMakeLists.txt  Command.cpp  DummyFSPlanner.cpp  Foot.cpp  LipmWalkingCon.cpp  Logger.cpp  Makefile  RobotState.cpp  StaticWalkingCon.cpp  Task2WalkingCon.cpp  TrajEW.cpp  Transmission.cpp  WalkingCon.cpp  lipm_planner.cpp  quaternion.cpp  spline.cpp
cmu_walk/src/drc_hat/: HatNSRobotState.cpp  HatRobotState.cpp  hat_id_controller.cpp  hat_ik_controller.cpp  hatns_id_controller.cpp  hatns_ik_controller.cpp
cmu_walk/src/drc_hat/sdfast/: drc_hat.cpp  drc_hat.h  drc_hat.sd  drc_hat_d.c  drc_hat_gz.cpp  drc_hat_gz.sd  drc_hat_i  drc_hat_ns.cpp  drc_hat_ns.sd  drc_hat_ns_gz.cpp  drc_hat_ns_gz.sd  drc_hat_s.c  makeSDFASTModel  template2_cpp
cmu_walk/src/drc_pelvis/: PelvRobotState.cpp  pelv_id_controller.cpp  pelv_ik_controller.cpp  sf_pelv_id_controller.cpp  sf_pelv_ik_controller.cpp
cmu_walk/src/drc_pelvis/sdfast/: drc_pelvis.sd  drc_pelvis.sd_old  drc_pelvis_atlas.cpp  drc_pelvis_atlas_0.05.cpp  drc_pelvis_atlas_7_0.07.cpp  drc_pelvis_atlas_utorso_shifted.cpp  drc_pelvis_cga.cpp  drc_pelvis_d.c  drc_pelvis_gz.cpp  drc_pelvis_i  drc_pelvis_old_4_17  drc_pelvis_s.c  full_air.sd  makeSDFASTModel  sdfastplus.m  sdlib.c  template2_h
cmu_walk/src/filter/: KFdata.cpp  atlas_rubble_filter.cc  filters.cpp  kinematicfilter.cpp  kinematicfilterEric.cpp  pelv_dyn_benx.cpp
cmu_walk/src/filter/data/: Bias_Q  DSc_R  Imu_P0  Imu_Q  Imu_R  Quat_R  Qv  Rv  SS_R  writePQR.m
cmu_walk/src/lipmz/: backward_pass.m  forward_pass.m  getAB.m  getAB_lipm.m  lipm.m  lipm_int.m  lipmz.m  lipmz_int.m  untitled11.m
cmu_walk/src/mrdplot/: merge-mrdplot  merge-mrdplot.c  mrdplot-cga.c  mrdplot-dbent.c  mrdplot.c  notes.txt
cmu_walk/src/sdfast_common/: SDModel_common.cpp
cmu_walk/src/tests/: checkCOM.cpp  test_bdi_data.cpp  test_fk.cpp  test_ik.cpp  test_transmission.cpp
cmu_walk/src/upper_body_sdfast/: CMakeLists.txt  atlas_upper.sd  drc_pelvis_upper.sd  drc_pelvis_upper_d.c  drc_pelvis_upper_i  drc_pelvis_upper_s.c  main.c  makeSDFASTModel  sdlib.c
test_walk/: CMakeLists.txt  mainpage.dox  manifest.xml
test_walk/config/con_param/: EW_ID.cf  EW_IDmanip.cf  EW_IK.cf  EW_IKmanip.cf  EW_ManipBal.cf  atlas_bal_idCon.conf  atlas_bal_ikCon.conf  atlas_bal_wc.conf  atlas_ew_approach_wc.conf  atlas_idCon.conf  atlas_ikCon.conf  atlas_static_idCon.conf  atlas_static_ikCon.conf  atlas_static_wc.conf  atlas_wc.conf  bal_idCon.conf  bal_wc.conf  flat_wc.conf  heelconf  idCon.conf  mud_wc.conf  rough_idCon.conf  wc.conf  (+4 more)
test_walk/launch/: atlas.launch  atlas_bringup.launch
test_walk/msg/: AtlasStepData.msg  AtlasWalkParams.msg  simple_text.msg
test_walk/src/: .cmu_ctrl_utils.cpp.swp  .test_walk.cpp.swp  cmu_ctrl_utils.cpp  control_loop_ew_manip.cpp  control_loop_sf_walk.cpp  main.cpp  test_walk.cpp
(+20 files in other folders)
